--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "eslint": "~5.16.0",
         "eslint-plugin-isotropic": "~0.4.2",
         "mocha": "~6.1.4",
-        "nyc": "~14.1.0"
+        "nyc": "~14.1.1"
     },
     "engines": {
         "node": "^10.15.3",
@@ -75,6 +75,9 @@
         "root": true
     },
     "homepage": "https://github.com/ibi-group/isotropic-character-fold",
+    "keywords": [
+        "isotropic"
+    ],
     "license": "BSD-3-Clause",
     "main": "lib/character-fold.js",
     "name": "isotropic-character-fold",
