--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "description": "A utility to replace special characters in a string",
     "devDependencies": {
-        "isotropic-dev-dependencies": "0.0.0"
+        "isotropic-dev-dependencies": "~0.1.0"
     },
     "engines": {
         "node": "^14.15.5",
@@ -37,5 +37,5 @@
         "pretest": "npm run lint",
         "test": "cross-env BABEL_ENV=test nyc --nycrc-path ./node_modules/isotropic-dev-dependencies/config/nyc.json mocha"
     },
-    "version": "0.6.0"
+    "version": "0.7.0"
 }
