Ensure the correct version of eslint gets installed

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "description": "A utility to replace special characters in a string",
     "devDependencies": {
+        "eslint": "~9.8.0",
         "isotropic-dev-dependencies": "~0.3.0"
     },
     "engines": {
